--- a/css/default.css
+++ b/css/default.css
@@ -1,6 +1,88 @@
 @charset "utf-8";
-@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
+@import url('/fonts/pretendard.css');
 * {
     margin: 0;
-    font-family: 'pretendard';
+    padding: 0;
+    font-family: 'Pretendard';
+    text-decoration: none;
+    color: black;
+}
+
+p {
+    display: flex;
+    width: fit-content;
+}
+
+
+/*header*/
+
+header {
+    display: flex;
+    padding-top: 0.8em;
+    padding-bottom: 0.3em;
+    justify-content: center;
+}
+
+.head {
+    font-size: 30px;
+    font-weight: 900;
+}
+
+nav {
+    display: flex;
+    font-size: 15px;
+    font-weight: 600;
+    justify-content: center;
+    padding-bottom: 1em;
+    border-bottom: 1px solid #ddd;
+}
+
+.nav-button {
+    padding-left: 0.5em;
+    padding-right: 0.5em;
+    color: grey;
+}
+
+.nav-button:hover {
+    font-weight: 700;
+    color: black;
+}
+
+
+/*content*/
+
+.banner {
+    display: flex;
+    font-size: 25px;
+    font-weight: 600;
+    height: 15em;
+    width: 100%;
+    background-position: center center;
+    background-size: cover;
+    align-items: center;
+    justify-content: center;
+}
+
+section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.container {
+    display: flex;
+    width: fit-content;
+    flex-direction: row;
+    justify-content: left;
+}
+
+
+/*footer*/
+
+footer {
+    display: flex;
+    flex-direction: column;
+    font-size: 15px;
+    font-weight: 700;
 }
