--- a/css/index.css
+++ b/css/index.css
@@ -3,5 +3,61 @@
 * {
     margin: 0;
     padding: 0;
+    height: 100%;
+    width: 100%;
     font-family: 'Pretendard';
+    text-decoration: none;
+    color: white;
+}
+
+section {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/img/index.webP");
+    background-size: cover;
+    align-items: center;
+    justify-content: center;
+}
+
+.intro {
+    display: flex;
+    font-size: 25px;
+    font-weight: 900;
+    border-left: 2px solid white;
+    padding-left: 1em;
+    margin-left: 1em;
+    flex-direction: column;
+    width: fit-content;
+    height: fit-content;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    color: #ac8bff;
+}
+
+.intro p {
+    margin-top: 2px;
+    font-size: 15px;
+    font-weight: 600;
+    letter-spacing: 0.5px;
+    color: white;
+}
+
+.intro a {
+    font-size: 15px;
+    font-weight: 600;
+    cursor: pointer;
+    border: 1px solid white;
+    border-radius: 0.8em;
+    padding: 0.4em 0.6em;
+    background: transparent;
+    width: fit-content;
+    height: fit-content;
+    color: white;
+    transition: all 0.3s;
+}
+
+.intro a:hover {
+    background: white;
+    color: black;
 }
