--- a/css/index.css
+++ b/css/index.css
@@ -35,7 +35,7 @@ section {
 }
 
 span {
-    color: #ffd631;
+    color: #efc311;
 }
 
 .intro p {
@@ -61,7 +61,6 @@ span {
 }
 
 .intro a:hover {
-    background: rgba(255, 255, 255, 0.5);
-    border: rgba(255, 255, 255, 0.5) 1px solid;
-    color: #ffd631;
+    background: white;
+    color: #efc311;
 }
