--- a/css/default.css
+++ b/css/default.css
@@ -93,8 +93,8 @@ footer {
     font-weight: 700;
     padding-top: 1em;
     padding-bottom: 1em;
-    padding-left: 5em;
     background-color: #ddd;
+    align-items: center;
 }
 
 footer .project {
