--- a/css/index.css
+++ b/css/index.css
@@ -5,6 +5,7 @@
     padding: 0;
     height: 100%;
     width: 100%;
+    font-size: 30px;
     font-family: 'Pretendard';
     text-decoration: none;
     color: white;
@@ -22,7 +23,7 @@ section {
 
 .intro {
     display: flex;
-    font-size: 25px;
+    font-size: 0.8em;
     font-weight: 900;
     border-left: 2px solid white;
     padding-left: 1em;
@@ -40,19 +41,19 @@ span {
 
 .intro p {
     margin-top: 2px;
-    font-size: 15px;
+    font-size: 0.6em;
     font-weight: 400;
     letter-spacing: 0.5px;
     color: white;
 }
 
 .intro a {
-    font-size: 15px;
+    font-size: 0.6em;
     font-weight: 600;
     cursor: pointer;
     border: 1px solid white;
     border-radius: 0.8em;
-    padding: 0.4em 0.6em;
+    padding: 0.5em 0.7em;
     background: transparent;
     width: fit-content;
     height: fit-content;
@@ -63,4 +64,28 @@ span {
 .intro a:hover {
     background: white;
     color: #efc311;
+}
+
+@media screen and (max-width: 1200px) {
+    * {
+        font-size: 24px;
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    * {
+        font-size: 23px;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    * {
+        font-size: 22px;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    * {
+        font-size: 21px;
+    }
 }
