--- a/css/default.css
+++ b/css/default.css
@@ -16,16 +16,17 @@ header {
     padding-top: 0.8em;
     padding-bottom: 0.3em;
     justify-content: center;
+    font-size: 30px;
 }
 
 .head {
-    font-size: 30px;
+    font-size: 1em;
     font-weight: 900;
 }
 
 nav {
     display: flex;
-    font-size: 15px;
+    font-size: 30px;
     font-weight: 600;
     justify-content: center;
     padding-bottom: 1em;
@@ -33,6 +34,7 @@ nav {
 }
 
 .nav-button {
+    font-size: 0.5em;
     padding-left: 0.5em;
     padding-right: 0.5em;
     color: grey;
@@ -106,4 +108,44 @@ footer .contact {
     width: fit-content;
     font-size: 0.4em;
     font-weight: 300;
+}
+
+@media screen and (max-width: 1200px) {
+    head,
+    nav {
+        font-size: 24px;
+    }
+    footer {
+        font-size: 16px;
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    head,
+    nav {
+        font-size: 22px;
+    }
+    footer {
+        font-size: 14px;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    head,
+    nav {
+        font-size: 21px;
+    }
+    footer {
+        font-size: 13px;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    head,
+    nav {
+        font-size: 20px;
+    }
+    footer {
+        font-size: 12px;
+    }
 }
