--- a/css/default.css
+++ b/css/default.css
@@ -29,15 +29,15 @@ nav {
     font-size: 30px;
     font-weight: 600;
     justify-content: center;
-    padding-bottom: 1em;
+    padding-bottom: 0.8em;
     border-bottom: 1px solid #ddd;
 }
 
 .nav-button {
     font-size: 0.5em;
-    padding-left: 0.5em;
-    padding-right: 0.5em;
-    color: grey;
+    padding-left: 0.8em;
+    padding-right: 0.8em;
+    color: rgb(158, 158, 158);
     transition: all 0.3s;
 }
 
