--- a/css/default.css
+++ b/css/default.css
@@ -38,12 +38,12 @@ nav {
     padding-left: 0.8em;
     padding-right: 0.8em;
     color: rgb(158, 158, 158);
-    transition: all 0.3s;
 }
 
 .nav-button:hover {
     font-weight: 700;
     color: black;
+    transition: color 0.3s;
 }
 
 
@@ -108,6 +108,12 @@ footer .contact {
     width: fit-content;
     font-size: 0.5em;
     font-weight: 300;
+}
+
+footer .used_components {
+    width: fit-content;
+    font-size: 0.4em;
+    font-weight: 200;
 }
 
 @media screen and (max-width: 1200px) {
